--- a/src/main/resources/templates/ViewUI.html
+++ b/src/main/resources/templates/ViewUI.html
@@ -174,10 +174,8 @@
                     document.getElementById("player1ProgressTowardsWin").textContent = data.player1.progressTowardWin;
                     document.getElementById("player2ProgressTowardsWin").textContent = data.player2.progressTowardWin;
 
-                    //TODO i think this would be where you'd also update each of the 5 boxes? potentially?
-
                     /*
-                    //document.getElementById("winConditionDisplay").textContent = data.winCondition;  //TODO update after winCondition is moved to win class
+                    //document.getElementById("winConditionDisplay").textContent = data.winCondition;
                     const winConditionMap = {
                         horror: "4 Horror Movies",
                         comedy: "4 Comedies",
