--- a/src/main/resources/templates/ViewUI.html
+++ b/src/main/resources/templates/ViewUI.html
@@ -394,7 +394,7 @@
             <!--<p><b>Active Player:</b> <span id="activePlayer" th:text="${activePlayer}">player1</span></p> -->
             <!--  <p><b>Active Player:</b> <span id="activePlayer">player1</span></p>  -->
             <p><b>Win Condition:</b> <span id="winConditionDisplay">Loading...</span></p>
-            <p><b>Rounds Played:</b> <span id="roundCount">error</span></p>
+            <p><b>Rounds Played:</b> <span id="roundCount">Loading...</span></p>
         </div>
         <div class="movie-input">
             <input type="text" id="movieInput" placeholder="Enter a movie..." />
